--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tslint": "^5.19.0",
+    "tslint-react": "^4.0.0"
   }
 }
