--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
+      # Dubnium (node v10)
+      - image: circleci/node:dubnium
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
