--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "antd": "^3.23.2",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.4",
     "react": "^16.9.0",
