--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "^4.3.5",
     "antd": "^3.23.2",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.4",
     "react": "^16.9.0",
     "react-apollo": "^3.0.1",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "typescript": "3.6.2"
   },
