--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.1.3",
     "antd": "^4.1.1",
     "apollo-boost": "^0.4.4",
+    "eslint": "^6.8.0",
     "graphql": "^15.0.0",
     "react": "^16.9.0",
     "react-apollo": "^3.0.1",
@@ -40,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "tslint": "^6.1.1",
-    "tslint-react": "^4.0.0"
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0"
   }
 }
