--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-boost": "^0.4.4",
     "eslint": "^6.8.0",
     "graphql": "^15.0.0",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-apollo": "^3.0.1",
     "react-dom": "^16.9.0",
